# gstreamer1.0-delta

./: AUTHORS  ChangeLog  README  README.md  autogen-clean.sh  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  delta.c  delta.h  gstdeltadsp.c  gstdeltadsp.h
